v1.13.x/connectors/database/snowflake.mdx
---
title: Snowflake Connector | OpenMetadata Cloud Data Warehouse
description: Connect Snowflake to OpenMetadata with our comprehensive database connector guide. Easy setup, metadata extraction, and data lineage tracking.
sidebarTitle: Overview
---

import { ConnectorDetailsHeader } from '/snippets/components/ConnectorDetailsHeader/ConnectorDetailsHeader.jsx'
import TestConnection from '/snippets/connectors/test-connection.mdx'
import IngestionScheduleAndDeploy from '/snippets/connectors/ingestion-schedule-and-deploy.mdx'
import ConfigureIngestion from '/snippets/connectors/database/configure-ingestion.mdx'
import AdvancedConfiguration from '/snippets/connectors/database/advanced-configuration.mdx'
import { MetadataIngestionUi } from '/snippets/components/MetadataIngestionUi.jsx'
import Related from '/snippets/v1.13.x/connectors/database/related.mdx'

<ConnectorDetailsHeader
icon='/public/images/connectors/snowflakes.webp'
name="Snowflake"
stage="PROD"
availableFeatures={["Metadata", "Query Usage", "Data Profiler", "Data Quality", "Lineage", "Column-level Lineage", "dbt", "Stored Procedures", "Owners", "Tags", "Sample Data", "Auto-Classification"]}
unavailableFeatures={[]} />
In this section, we provide guides and references to use the Snowflake connector.

<Info>
**Supported Authentication Types:**
- **Basic Auth** — Username and password authentication
- **Key Pair Auth** — Private key authentication with optional passphrase (see [Snowflake Key Pair Auth docs](https://docs.snowflake.com/en/user-guide/key-pair-auth))
- **SSO** — Single-Sign-On via the `authenticator` connection argument
</Info>

Configure and schedule Snowflake metadata and profiler workflows from the OpenMetadata UI:
- [Requirements](#requirements)
- [Metadata Ingestion](#metadata-ingestion)
    - [Incremental Extraction](/v1.13.x/connectors/ingestion/workflows/metadata/incremental-extraction/snowflake)
- [Query Usage](/v1.13.x/connectors/ingestion/workflows/usage)
- [Data Profiler](/v1.13.x/how-to-guides/data-quality-observability/profiler/profiler-workflow)
- [Data Quality](/v1.13.x/how-to-guides/data-quality-observability/quality)
- [Lineage](/v1.13.x/connectors/ingestion/lineage)
- [dbt Integration](/v1.13.x/connectors/database/dbt)
- [Troubleshooting](/v1.13.x/connectors/database/snowflake/troubleshooting)

## Requirements
To ingest basic metadata snowflake user must have the following privileges:
  - `USAGE` Privilege on Warehouse
  - `USAGE` Privilege on Database
  - `USAGE` Privilege on Schema
  - `SELECT` Privilege on Tables
  
Before you grant privileges, replace these placeholders with your own values:

| Placeholder | Description |
|---|---|
| `<role_name>` | Name of the new Snowflake role you want to create and assign to the user |
| `<user_name>` | Username for the new Snowflake user being created |
| `<password>` | A strong password for the new Snowflake user |
| `<warehouse_name>` | Name of the Snowflake warehouse the new role needs access to |
| `<database_name>` | Name of the Snowflake database from which you want to ingest data |

```sql
-- Create new role
CREATE ROLE <role_name>;
-- Create new user
CREATE USER <user_name> DEFAULT_ROLE=<role_name> PASSWORD='<password>';
-- Grant role to user
GRANT ROLE <role_name> TO USER <user_name>;
-- Grant USAGE Privilege on Warehouse to new role created above
GRANT USAGE ON WAREHOUSE <warehouse_name> TO ROLE <role_name>;
-- Grant USAGE Privilege on Database to new role created above
GRANT USAGE ON DATABASE <database_name> TO ROLE <role_name>;
-- Grant USAGE Privilege on required Schemas to new role created above
GRANT USAGE ON ALL SCHEMAS IN DATABASE <database_name> TO ROLE <role_name>;
GRANT USAGE ON FUTURE SCHEMAS IN DATABASE <database_name> TO ROLE <role_name>;
-- Grant SELECT Privilege on required tables & views to new role created above
GRANT SELECT ON ALL FUTURE TABLES IN DATABASE <database_name> TO ROLE <role_name>;
GRANT SELECT ON ALL TABLES IN DATABASE <database_name> TO ROLE <role_name>;
GRANT SELECT ON ALL FUTURE EXTERNAL TABLES IN DATABASE <database_name> TO ROLE <role_name>;
GRANT SELECT ON ALL EXTERNAL TABLES IN DATABASE <database_name> TO ROLE <role_name>;
GRANT SELECT ON ALL FUTURE VIEWS IN DATABASE <database_name> TO ROLE <role_name>;
GRANT SELECT ON ALL VIEWS IN DATABASE <database_name> TO ROLE <role_name>;
GRANT SELECT ON ALL FUTURE DYNAMIC TABLES IN DATABASE <database_name> TO ROLE <role_name>;
GRANT SELECT ON ALL DYNAMIC TABLES IN DATABASE <database_name> TO ROLE <role_name>;
-- Grant IMPORTED PRIVILEGES on all Schemas of SNOWFLAKE DB to new role created above. 
-- This is optional but required for usage, lineage and stored procedure ingestion
GRANT IMPORTED PRIVILEGES ON ALL SCHEMAS IN DATABASE SNOWFLAKE TO ROLE <role_name>;
```
### Additional Privileges
The following workflows require additional grants:

- **Incremental Extraction**: OpenMetadata fetches the information by querying `snowflake.account_usage.tables`.
- **Ingesting Tags**: OpenMetadata fetches the information by querying `snowflake.account_usage.tag_references`.
- **Ingesting Stored Procedures**: OpenMetadata fetches the information by querying `snowflake.account_usage.procedures` & `snowflake.account_usage.functions`.
- **Lineage & Usage Workflow**: For lineage, OpenMetadata uses Snowflake's `ACCOUNT_USAGE.ACCESS_HISTORY` view by default, which provides Snowflake-computed table- and column-level lineage (including for queries OpenMetadata cannot parse). If the configured role cannot read `ACCESS_HISTORY`, ingestion automatically falls back to parsing query logs. For the Usage workflow—and as the lineage fallback—OpenMetadata fetches query logs by querying `snowflake.account_usage.query_history`. Both `ACCESS_HISTORY` and `QUERY_HISTORY` require the Snowflake user to have the `ACCOUNTADMIN` role or a role with `IMPORTED PRIVILEGES` on the `SNOWFLAKE` database.

  For more information about the `account_usage` schema, see [Account Usage](https://docs.snowflake.com/en/sql-reference/account-usage).

## Metadata Ingestion
<MetadataIngestionUi connector={"Snowflake"} selectServicePath={"/public/images/connectors/snowflake/select-service.png"} addNewServicePath={"/public/images/connectors/snowflake/add-new-service.png"} serviceConnectionPath={"/public/images/connectors/snowflake/service-connection.png"} />
# Connection Details
<Steps>
<Step title="Connection Details">
<Tip>
When using a **Hybrid Ingestion Runner**, any sensitive credential fields—such as passwords, API keys, or private keys—must reference secrets using the following format:
```
password: secret:/my/database/password
```
This applies **only to fields marked as secrets** in the connection form (these typically mask input and show a visibility toggle icon).
For a complete guide on managing secrets in hybrid setups, see the [Hybrid Ingestion Runner Secret Management Guide](https://docs.getcollate.io/getting-started/day-1/hybrid-saas/hybrid-ingestion-runner#3.-manage-secrets-securely).
</Tip>
- **Username**: Specify the User to connect to Snowflake. It should have enough privileges to read all the metadata.
- **Password**: Password to connect to Snowflake.
- **Account**: Snowflake account identifier uniquely identifies a Snowflake account within your organization, as well as throughout the global network of Snowflake-supported cloud platforms and cloud regions. If the Snowflake URL is `https://xyz1234.us-east-1.gcp.snowflakecomputing.com`, then the account is `xyz1234.us-east-1.gcp`.
- **Role (Optional)**: You can specify the role of user that you would like to ingest with, if no role is specified the default roles assigned to user will be selected.
- **Warehouse**: Snowflake warehouse is required for executing queries to fetch the metadata. Enter the name of warehouse against which you would like to execute these queries.
- **Database (Optional)**: The database of the data source is an optional parameter, if you would like to restrict the metadata reading to a single database. If left blank, OpenMetadata ingestion attempts to scan all the databases.
- **Private Key (Optional)**: If you have configured the key pair authentication for the given user you will have to pass the private key associated with the user in this field. For more information about key-pair authentication, see [Key-pair authentication and key-pair rotation](https://docs.snowflake.com/en/user-guide/key-pair-auth).

  Ensure your private key is formatted correctly before passing it. The key must be a single line with all line breaks replaced by `\n`.
    
  For example, if you have the following multi-line key (raw format):

  ```
  -----BEGIN ENCRYPTED PRIVATE KEY-----
  MII..
  MBQ...
  CgU..
  8Lt..
  ...
  h+4=
  -----END ENCRYPTED PRIVATE KEY-----
  ```

  Replace it with the following single-line key (required format):

  ```
  -----BEGIN ENCRYPTED PRIVATE KEY-----\nMII..\nMBQ...\nCgU..\n8Lt..\n...\nh+4=\n-----END ENCRYPTED PRIVATE KEY-----\n
  ```

  Replace every newline character in your key with a literal `\n`, including after the final line.
- **Snowflake Passphrase Key (Optional)**: If you have configured the encrypted key pair authentication for the given user you will have to pass the passphrase associated with the private key in this field. You can check out [this](https://docs.snowflake.com/en/user-guide/key-pair-auth) doc to get more details about key-pair authentication.
- **Include Temporary and Transient Tables**:
Optional configuration for ingestion of `TRANSIENT` and `TEMPORARY` tables. Enabled by default, so these tables are ingested alongside permanent ones. Disable it to skip them.
- **Include Streams**:
Optional configuration for ingestion of streams, By default, it will skip the streams.
- **Include Stages**:
Optional configuration for ingestion of Snowflake stages (internal and external). By default, stages are not ingested.
- **Query Tag (Optional)**: Session query tag used to monitor usage on Snowflake. To use a query tag, the Snowflake user should have enough privileges to alter the session.
- **Client Session Keep Alive**: Optional Configuration to keep the session active in case the ingestion job runs for longer duration.
- **Account Usage Schema Name**: Full name of account usage schema, used in case your user does not have direct access to `SNOWFLAKE.ACCOUNT_USAGE` schema. In such case you can replicate tables `QUERY_HISTORY`, `TAG_REFERENCES`, `PROCEDURES`, `FUNCTIONS`, `ACCESS_HISTORY` to a custom schema let's say `CUSTOM_DB.CUSTOM_SCHEMA` and provide the same name in this field.
When using this field, make sure you have all these tables available within your custom schema `QUERY_HISTORY`, `TAG_REFERENCES`, `PROCEDURES`, `FUNCTIONS`, `ACCESS_HISTORY`.
- **Cost of Credit (Optional)**: Cost of a Snowflake credit for your account, used to estimate warehouse and query costs. Defaults to `3.3`.
- **Snowflake Source Host (Optional)**: Snowflake account host used to build direct links back to Snowflake, for example from lineage or query details. Defaults to `app.snowflake.com`.
</Step>
<AdvancedConfiguration />
<Step>
In addition to the fields above, the Snowflake connector's Advanced Configuration includes:
    - **Use Access History for Lineage**: Uses Snowflake's `ACCOUNT_USAGE.ACCESS_HISTORY` view as the source of query lineage. `ACCESS_HISTORY` provides Snowflake-computed table- and column-level lineage, including for queries OpenMetadata cannot parse. Enabled by default. If the configured role cannot read `ACCESS_HISTORY`, ingestion automatically falls back to the legacy query-log parser.
    - **Access History Chunk Size (Days)**: Number of days of `ACCESS_HISTORY` scanned per query when "Use Access History for Lineage" is enabled. The lineage time window is split into chunks of this size to keep each query bounded and avoid timeouts on busy accounts. Defaults to `2`.
</Step>
<TestConnection />
<ConfigureIngestion />
<IngestionScheduleAndDeploy />
</Steps>
### Incomplete Column Level for Views
For views with a tag or policy, you may see incorrect lineage, this can be because user may not have enough access to fetch those policies or tags. You need to grant the following privileges in order to fix it.
Check out the [Snowflake docs](https://docs.snowflake.com/en/sql-reference/functions/get_ddl#usage-notes) for further details.
```
GRANT APPLY MASKING POLICY TO ROLE <role_name>;
GRANT APPLY ROW ACCESS POLICY TO ROLE <role_name>;
GRANT APPLY AGGREGATION POLICY TO ROLE <role_name>;
GRANT APPLY PROJECTION POLICY TO ROLE <role_name>;
GRANT APPLY TAG TO ROLE <role_name>;
```
Depending on your view ddl you can grant the relevant privileges as per above queries.

<Related />
